package messages;

message Heartbeat {
  // Empty message
}

message Job {
  required uint32 id = 1; // Job ID
  optional uint32 job_type = 2; // Job type
  repeated double data = 3; // Job data
}

message Result {
  required uint32 id = 1; // Job ID
  optional double data = 2; // Result data
}

message BatchJob {
  required uint32 id = 1; // Batch ID
  repeated uint32 job_type = 2; // Job types this request uses
  repeated double data = 3; // Job data
}

message BatchResult {
  required uint32 id = 1; // Batch ID
  repeated double data = 2; // Result data
}
